# family-english-learning-assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  render.yaml
.github/workflows/: pages.yml
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/public/assets/avatars/: role-avatars.json
apps/web/src/: main.tsx  styles.css
data/teaching_knowledge/: source_catalog.v1.json  starter_phonics_route.v1.json
data/teaching_knowledge/user_routes/: frank_route.v1.json  vi_route.v1.json
db/migrations/: 001_initial_schema.sql
db/seeds/: seed_v1_1.sql
docs/assets/: avatar_style_prompt.md
docs/content_knowledge_base/: README.md  audio_strategy_v1.md  lesson_json_authoring_rules.md  route_design_v1.md  sources_and_materials.md
docs/engineering/: api_contract.md  architecture.md  data_dictionary.md  debug_guide.md  public_deploy_github.md
docs/product/: PRD_v1.1.md  content_contracts.md
scripts/: backup_db.sh  debug_modules.sh  dev.sh  export_learning_log.sh  init_db.sh  normalize_lesson_json.sh  reset_user_mom_learning_records.sql  seed_test_data.sh  start_e2e_api.sh  start_e2e_web.sh  submit_sample_progress.sh
services/api/app/: core.py  main.py
services/api/app/schemas/: learning_review.schema.json  lesson_plan.schema.json
services/api/app/tools/: debug_modules.py  generate_today.py  init_db.py  submit_sample_progress.py
tests/: conftest.py  test_content_generation.py
tests/e2e/: learner-flow.spec.ts
