[project]
name = "family-english-learning-assistant"
version = "1.1.0"
description = "Local web English learning assistant for family use."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.setuptools]
packages = []
